Add X11 directore to build process in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,9 +12,10 @@ if(X11_FOUND)
     add_library(heatbeam 
         ${HEATSRC}/heatbeam.cpp ${HEATSRC}/heatbeam.hpp)
     add_executable(XHeat ${HEATSRC}/main.cpp ${HEATSRC}/heatbeam.hpp)
+    target_include_directories(heatbeam INTERFACE /opt/X11/include)
     target_include_directories(heatbeam PRIVATE ${X11_INCLUDE_DIR})
     target_link_libraries(heatbeam PRIVATE ${X11_LIBRARIES})
-    target_link_libraries(XHeat PRIVATE heatbeam)
+    target_link_libraries(XHeat PRIVATE heatbeam ${X11_LIBRARIES})
 else(X11_FOUND)
     message("Cannot locate X11 on this system.")
 endif(X11_FOUND)
